# Initial-HAFC-simulator-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-ml.txt
.github/workflows/: ci.yml
examples/: maze_dc.py  toy_egatl.py
examples/ml/: __init__.py
src/hafc/: __init__.py  graph.py  phase_lift.py  solvers.py  viz.py
src/hafc/models/: __init__.py  complexG.py  dc_ac.py  egatl.py
tests/: test_egatl.py  test_graph.py  test_phase_lift.py  test_solvers.py
