[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hafc"
version = "0.1.0"
description = "Hybrid Analog-Flow Computing simulator toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "pennylane>=0.33",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = ["E741"]  # allow I for current (physics convention)

[tool.pytest.ini_options]
testpaths = ["tests"]
